--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>
-  {{title}}
-</h1>
+<a routerLink="/basket">Basket</a>
+<a routerLink="/products">Products</a>
+<router-outlet></router-outlet>
